--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="script.js"></script>
 
 
-    <title>Github Pages Test</title>
+    <title>Github Pages Test.</title>
   </head>
   <body>
   
